objects/SolutionApproach__c.object
<CustomObject>
    <fields>
        <fullName>AdditionalComments__c</fullName>
        <label>Additional Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProposedTechnicalSolution__c</fullName>
        <label>Proposed Technical Solution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SolutionApproachTitle__c</fullName>
        <label>Solution Approach Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TechnicalSolutionComponents__c</fullName>
        <label>Technical Solution Components</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Object</fullName>
                </value>
                <value>
                    <fullName>Custom Object</fullName>
                </value>
                <value>
                    <fullName>Workflow</fullName>
                </value>
                <value>
                    <fullName>Approval Process</fullName>
                </value>
                <value>
                    <fullName>Email Alerts</fullName>
                </value>
                <value>
                    <fullName>Apex Code</fullName>
                </value>
                <value>
                    <fullName>Visual Force</fullName>
                </value>
                <value>
                    <fullName>Roles</fullName>
                </value>
                <value>
                    <fullName>Profiles</fullName>
                </value>
                <value>
                    <fullName>Groups</fullName>
                </value>
                <value>
                    <fullName>Queues</fullName>
                </value>
                <value>
                    <fullName>Batch Integration</fullName>
                </value>
                <value>
                    <fullName>Real-time Integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Solution Approach</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Solution Approach-{000}</displayFormat>
        <label>Solution Approach Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solution Approaches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>